crates/quasar-syntax/src/snapshots/quasar_syntax__lexer__tests__snapshot_all_types_fixture.snap
---
source: crates/quasar-syntax/src/lexer.rs
expression: display
---
- "1:39 newline"
- "2:1 network"
- "2:9 ident(testnet)"
- "2:16 newline"
- "3:1 source"
- "3:9 ident(GAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAWHF)"
- "3:65 newline"
- "4:1 fee"
- "4:9 number(100000)"
- "4:15 newline"
- "5:1 timeout"
- "5:9 number(30)"
- "5:11 newline"
- "7:1 call"
- "7:6 ident(CAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABSC4)"
- "7:63 ident(test_types)"
- "7:73 ("
- "7:74 newline"
- "8:3 ident(bool)"
- "8:7 ("
- "8:8 true"
- "8:12 )"
- "8:13 ,"
- "8:14 newline"
- "9:3 ident(bool)"
- "9:7 ("
- "9:8 false"
- "9:13 )"
- "9:14 ,"
- "9:15 newline"
- "10:3 ident(u32)"
- "10:6 ("
- "10:7 number(42)"
- "10:9 )"
- "10:10 ,"
- "10:11 newline"
- "11:3 ident(i32)"
- "11:6 ("
- "11:7 -"
- "11:8 number(1)"
- "11:9 )"
- "11:10 ,"
- "11:11 newline"
- "12:3 ident(u64)"
- "12:6 ("
- "12:7 number(18446744073709551615)"
- "12:27 )"
- "12:28 ,"
- "12:29 newline"
- "13:3 ident(i64)"
- "13:6 ("
- "13:7 -"
- "13:8 number(9223372036854775808)"
- "13:27 )"
- "13:28 ,"
- "13:29 newline"
- "14:3 ident(u128)"
- "14:7 ("
- "14:8 string(\"340282366920938463463374607431768211455\")"
- "14:49 )"
- "14:50 ,"
- "14:51 newline"
- "15:3 ident(i128)"
- "15:7 ("
- "15:8 string(\"-170141183460469231731687303715884105728\")"
- "15:50 )"
- "15:51 ,"
- "15:52 newline"
- "16:3 ident(string)"
- "16:9 ("
- "16:10 string(\"hello world\")"
- "16:23 )"
- "16:24 ,"
- "16:25 newline"
- "17:3 ident(symbol)"
- "17:9 ("
- "17:10 string(\"transfer\")"
- "17:20 )"
- "17:21 ,"
- "17:22 newline"
- "18:3 ident(bytes)"
- "18:8 ("
- "18:9 string(\"0xdeadbeef\")"
- "18:21 )"
- "18:22 ,"
- "18:23 newline"
- "19:3 ident(address)"
- "19:10 ("
- "19:11 string(\"GAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAWHF\")"
- "19:69 )"
- "19:70 ,"
- "19:71 newline"
- "20:3 ident(address)"
- "20:10 ("
- "20:11 string(\"CAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABSC4\")"
- "20:69 )"
- "20:70 ,"
- "20:71 newline"
- "21:3 ident(vec)"
- "21:6 ("
- "21:7 ident(u32)"
- "21:10 ("
- "21:11 number(1)"
- "21:12 )"
- "21:13 ,"
- "21:15 ident(u32)"
- "21:18 ("
- "21:19 number(2)"
- "21:20 )"
- "21:21 ,"
- "21:23 ident(u32)"
- "21:26 ("
- "21:27 number(3)"
- "21:28 )"
- "21:29 )"
- "21:30 ,"
- "21:31 newline"
- "22:3 ident(map)"
- "22:6 ("
- "22:7 ident(symbol)"
- "22:13 ("
- "22:14 string(\"name\")"
- "22:20 )"
- "22:22 =>"
- "22:25 ident(string)"
- "22:31 ("
- "22:32 string(\"Quasar\")"
- "22:40 )"
- "22:41 )"
- "22:42 newline"
- "23:1 )"
- "23:2 newline"
- "24:1 EOF"
