crates/quasar-syntax/src/snapshots/quasar_syntax__lexer__tests__snapshot_minimal_fixture.snap
---
source: crates/quasar-syntax/src/lexer.rs
expression: display
---
- "1:1 network"
- "1:9 ident(testnet)"
- "1:16 newline"
- "2:1 source"
- "2:9 ident(GAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAWHF)"
- "2:65 newline"
- "4:1 call"
- "4:6 ident(CAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABSC4)"
- "4:63 ident(balance)"
- "4:70 ("
- "4:71 newline"
- "5:3 ident(address)"
- "5:10 ("
- "5:11 string(\"GAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAWHF\")"
- "5:69 )"
- "5:70 newline"
- "6:1 )"
- "6:2 newline"
- "7:1 EOF"
