crates/quasar-syntax/src/snapshots/quasar_syntax__lexer__tests__snapshot_transfer_fixture.snap
---
source: crates/quasar-syntax/src/lexer.rs
expression: display
---
- "1:34 newline"
- "2:1 network"
- "2:9 ident(testnet)"
- "2:16 newline"
- "3:1 source"
- "3:9 ident(GAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAWHF)"
- "3:65 newline"
- "4:1 fee"
- "4:9 number(100000)"
- "4:15 newline"
- "5:1 timeout"
- "5:9 number(60)"
- "5:11 newline"
- "7:1 call"
- "7:6 ident(CAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABSC4)"
- "7:63 ident(transfer)"
- "7:71 ("
- "7:72 newline"
- "8:3 ident(address)"
- "8:10 ("
- "8:11 string(\"GAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAWHF\")"
- "8:69 )"
- "8:70 ,"
- "8:71 newline"
- "9:3 ident(address)"
- "9:10 ("
- "9:11 string(\"GAAQEAYEAUDAOCAJBIFQYDIOB4IBCEQTCQKRMFYYDENBWHA5DYPSABOV\")"
- "9:69 )"
- "9:70 ,"
- "9:71 newline"
- "10:3 ident(i128)"
- "10:7 ("
- "10:8 string(\"10000000\")"
- "10:18 )"
- "10:19 newline"
- "11:1 )"
- "11:2 newline"
- "12:1 EOF"
